openshift/kustomize/bundles/solr/base/routes/solr/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: solr
  namespace: solr
spec:
  host: solr-solr.apps-crc.testing
  to:
    kind: Service
    name: default-solrcloud-common
    weight: 100
  port:
    targetPort: solr-client
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
